Fixed responsiveness and contrasts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,9 +33,12 @@ h1 {
 }
 
 h2 {
-	color: #CAEF84;
+    color: #CAEF84;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 1.4rem;
+    font-weight: bold;
+    -webkit-filter: drop-shadow(0.1rem 0.1rem 0.4rem #383636);
+	filter: drop-shadow(0.1rem 0.1rem 0.4rem #383636);
 }
 
 h3,
@@ -79,13 +82,14 @@ p {
 
 .submit-btn {
 	background-color: #8CC63F;
-	color: #fff !important;
+	color: #ffffff !important;
 	border: none;
 	-webkit-filter: drop-shadow(0.1rem 0.2rem 0.4rem #46454533);
 	filter: drop-shadow(0.1rem 0.2rem 0.4rem #46454533);
 	margin: 1rem !important;
 	padding: .5rem 1rem;
 }
+
 
 .square-card {
 	padding: 2rem 2rem;
@@ -151,9 +155,6 @@ hr {
 
 /*-------------------------Navigation bar and header banner */
 
-.navbar {
-	overflow-x: hidden !important;
-}
 
 .nav-link {
 	color: #6D564D !important;
@@ -275,9 +276,9 @@ hr {
 /*-------------------- All toys page */
 
 .add-toy-link {
-	position: absolute;
-	right: 2rem;
-	margin: 1rem 0 2rem 0;
+	margin: 2rem 0 4rem 0;
+    width: 100%;
+    float: left;
 }
 
 .toys-select-container {
